@@ -1,3 +1,9 @@
+2009-11-18  Jeffrey Stedfast  <fejj@novell.com>
+
+	* textbox.cpp (TextBoxBase::OnMouseMove): Update the primary
+	selection clipboard as the selection changes. Fixes lewing's frown
+	by turning it upside down.
+
 2009-11-18  Larry Ewing  <lewing@novell.com>
 
 	* runtime.cpp (PaintToDrawable): fix the lame expose color logic
